[project]
name = "youtube-channel-link-exporter"
version = "0.1.0"
description = "Agent Skill and local CLI for exporting YouTube channel video links from saved HTML files."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "vagancia00" }]
keywords = ["agent-skills", "youtube", "html", "automation", "ai-agentic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/vagancia00/youtube-channel-link-exporter"
Issues = "https://github.com/vagancia00/youtube-channel-link-exporter/issues"

[tool.ruff]
line-length = 100
